feat: Update email template to reflect app name and improve verification instructions

--- a/src/main/resources/templates/emailTemplate.html
+++ b/src/main/resources/templates/emailTemplate.html
@@ -29,9 +29,9 @@
 </head>
 <body>
 <div class="container">
-    <h2 style="color: #333;">Welcome to our app!</h2>
+    <h2 style="color: #333;">Welcome to TOEIC Rise!</h2>
     <p style="font-size: 16px;">
-        Please enter the verification code below to continue:
+        Please use the following verification code to complete your registration:
     </p>
     <div class="card">
         <h3 style="color: #333;">Verification Code:</h3>
